Inclusão de redirecionamento de página para Login

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
 
+   <script>
+      const hasToken = localStorage.token ? true : false;
+      if (!hasToken)
+         window.location.replace('https://livrados.vercel.app/view/login/');
+   </script>
+
    <header class="container-menu">
       <img src="./img/LivradosLogo.png" >
    </header>
